[DD-3280] add fix checkbox alignment

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -51,11 +51,12 @@ a:hover
   position relative
   display grid
   grid-template-columns auto 1fr
-  .checkbox
+  .pharmacy-checkbox
+    width 30px
+    height 30px
+    margin-right 10px
     label
-      position: relative
-      top 50%
-      transform translateY(-50%)
-      width 30px
-      height 30px
-      margin 0
+      position absolute !important
+      top 5px !important
+      margin-top 0px !important
+      margin-left 13px !important
